# micros

./: .gitignore  Makefile
auth-svc/: .env.example  Dockerfile  alembic.ini  pyproject.toml
auth-svc/alembic/: env.py
auth-svc/app/: main.py
docs/план/: 1_этап.md  спринты.md
docs/план/спринты/: 0_спринт.md  1_спринт.md
gateway/: Dockerfile  ngnix.conf
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
notify-svc/: Dockerfile  pyproject.toml
notify-svc/app/: main.py
task-svc/: Dockerfile  pyproject.toml
task-svc/app/: main.py
tooling/: mypy.ini  ruff.toml
