[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth_svc"
version = "0.1.0"
description = "Auth microservice (FastAPI + SQLAlchemy + Alembic + JWT RS256)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",         # для тестов по умолчанию (sqlite)
  "psycopg[binary]>=3.2",     # для Postgres в проде (опционально)
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "prometheus-fastapi-instrumentator>=7.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "anyio>=4.4",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"
