[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notify_svc"
version = "0.1.0"
description = "Notify microservice (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-fastapi-instrumentator>=7.0"
]

[tool.setuptools]
packages = ["app"]
